#create components and organisme

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "classnames": "^2.3.1",
     "next": "11.1.0",
     "optionator": "^0.9.1",
     "react": "17.0.2",
